--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,6 @@ body {
 
 #add-item-button, #clear-items-button {
     width: 20%;
-    cursor: pointer;
     text-align: center;
     height: 2rem;
     font-size: 1rem;
@@ -65,6 +64,7 @@ body {
 } */
 
 button {
+    cursor: pointer;
     padding: 0;
 }
 
@@ -83,12 +83,20 @@ button {
     font-size: 1rem;
 }
 
+#edit-item-button {
+    margin-right: 20.5%;
+    width: 20.5%;
+    height: 2rem;
+    text-align: center;
+    font-size: 1rem;
+}
+
+
 #remove-item-button {
     margin-right: 0;
     width: 19.5%;
     height: 2rem;
     font-size: 1rem;
-    cursor: pointer;
     text-align: center;
 }
 
